remove unnecessary deps, and fix generate loading style

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             method: 'POST',
             credentials: {
               'Content-Type': 'application/json',
-              Authorization: 'Bearer your_key'
+              Authorization: 'Bearer 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'
             }
           },
         }
